Login activity now makes login requests to server

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <!-- Strings relating to login activiy -->
     <string name="title_login">consort</string>
     <string name="hint_username">username</string>
+    <string name="button_submit">submit</string>
 
 </resources>
