Invisible nodes now masked on graph. Text entry for guessing now available.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="title_activity_game_session">GameSessionActivity</string>
     <string name="hello_world">Hello world!</string>
 
+    <!-- Game session related text -->
+    <string name="hint_guess">Guess a locked word</string>
+    <string name="ime_guess">Guess</string>
+
 </resources>
