--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">Consort</string>
-
     <string name="title_sessions">Sessions</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
@@ -19,5 +18,7 @@
 
     <!-- Session fragment related strings -->
     <string name="title_session_room">ROOM %1$s</string>
+    <string name="title_activity_gcm">GcmActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
